Corrected CSS for to make background static on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,15 @@ body {
 }
 
 .bg-img {
+  
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  z-index: -10;
   background-size: cover;
   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
 
